igt@xe_vm@munmap-style-unbind-userptr-either-side-partial - dmesg-warn - WARNING: CPU: .* PID: .* at drivers/gpu/drm/xe/xe_device.c:.* xe_device_assert_mem_access
<4> [260.726265] ------------[ cut here ]------------
<4> [260.726413] WARNING: CPU: 0 PID: 9 at drivers/gpu/drm/xe/xe_device.c:431 xe_device_assert_mem_access+0x17/0x20 [xe]
<4> [260.726557] Modules linked in: fuse r8153_ecm cdc_ether usbnet xe i2c_algo_bit drm_ttm_helper ttm drm_suballoc_helper x86_pkg_temp_thermal gpu_sched coretemp drm_display_helper drm_kms_helper kvm_intel syscopyarea mei_pxp mei_hdcp pmt_telemetry sysfillrect pmt_class sysimgblt fb_sys_fops kvm drm_buddy irqbypass cfbfillrect cfbimgblt crct10dif_pclmul r8152 cfbcopyarea crc32_pclmul mii ghash_clmulni_intel e1000e i2c_i801 fb ptp fbdev pps_core i2c_smbus mei_me mei intel_vsec wmi_bmof video wmi drm drm_panel_orientation_quirks ip_tables x_tables
<4> [260.726732] CPU: 0 PID: 9 Comm: kworker/0:1 Not tainted 6.4.0-xe #1
<4> [260.726738] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake H DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.4064.A00.2102041619 02/04/2021
<4> [260.726744] Workqueue: events drm_sched_main [gpu_sched]
<4> [260.726761] RIP: 0010:xe_device_assert_mem_access+0x17/0x20 [xe]
<4> [260.726899] Code: 00 00 00 90 90 90 90 90 90 90 90 90 90 90 90 90 90 90 90 66 0f 1f 00 0f 1f 44 00 00 e8 82 ff ff ff 84 c0 74 05 c3 cc cc cc cc <0f> 0b c3 cc cc cc cc 66 90 90 90 90 90 90 90 90 90 90 90 90 90 90
<4> [260.726905] RSP: 0018:ffff8881015d77b8 EFLAGS: 00010246
<4> [260.726913] RAX: 0000000000000000 RBX: ffff8881118ca298 RCX: dffffc0000000000
<4> [260.726918] RDX: 0000000000000003 RSI: 0000000000000004 RDI: ffff8881118ca3a8
<4> [260.726923] RBP: ffff8881118c8000 R08: ffffffffa0b942d3 R09: ffffed1022319476
<4> [260.726928] R10: ffff8881118ca3ab R11: ffffed1022319475 R12: 0000000000000000
<4> [260.726933] R13: ffff8881545a8028 R14: 0000000000000000 R15: ffff8881545a99d8
<4> [260.726938] FS: 0000000000000000(0000) GS:ffff888850200000(0000) knlGS:0000000000000000
<4> [260.726943] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [260.726948] CR2: 0000000001a3f000 CR3: 0000000129ff0001 CR4: 0000000000f70ef0
<4> [260.726953] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [260.726958] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4> [260.726962] PKRU: 55555554
<4> [260.726967] Call Trace:
<4> [260.726971] <TASK>
<4> [260.726977] ? __warn+0xa5/0x200
<4> [260.726986] ? xe_device_assert_mem_access+0x17/0x20 [xe]
<4> [260.727113] ? report_bug+0x216/0x220
<4> [260.727126] ? handle_bug+0x3c/0x70
<4> [260.727134] ? exc_invalid_op+0x18/0x50
<4> [260.727141] ? asm_exc_invalid_op+0x1a/0x20
<4> [260.727154] ? xe_device_mem_access_ongoing+0x43/0x60 [xe]
<4> [260.727398] ? xe_device_assert_mem_access+0x17/0x20 [xe]
<4> [260.727600] ? xe_device_assert_mem_access+0xe/0x20 [xe]
<4> [260.727749] guc_ct_send_locked+0x168/0xeb0 [xe]
<4> [260.727940] ? __mutex_lock+0xf8b/0x1310
<4> [260.727954] ? xe_guc_ct_send+0x30/0x90 [xe]
<4> [260.728137] ? __pfx_guc_ct_send_locked+0x10/0x10 [xe]
<4> [260.729302] ? __pfx___drm_printfn_info+0x10/0x10 [drm]
<4> [260.729404] ? mark_lock.part.0+0x106/0x1440
<4> [260.729415] ? mark_lock.part.0+0x106/0x1440
<4> [260.729426] ? mark_lock.part.0+0x106/0x1440
<4> [260.729433] ? __pfx_mark_lock.part.0+0x10/0x10
<4> [260.729443] ? mark_lock.part.0+0x106/0x1440
<4> [260.729457] ? __pfx_mark_lock.part.0+0x10/0x10
<4> [260.729476] xe_guc_ct_send+0x47/0x90 [xe]
<4> [260.729664] set_min_preemption_timeout+0xc9/0x100 [xe]
<4> [260.729849] ? __pfx_set_min_preemption_timeout+0x10/0x10 [xe]
<4> [260.730042] ? __lock_acquire+0xe9c/0x31a0
<4> [260.730060] disable_scheduling_deregister+0xd5/0x3f0 [xe]
<4> [260.730278] ? __pfx_disable_scheduling_deregister+0x10/0x10 [xe]
<4> [260.730462] ? __pfx___lock_acquire+0x10/0x10
<4> [260.730470] ? __lock_acquire+0xe9c/0x31a0
<4> [260.730502] guc_engine_process_msg+0x412/0x8c0 [xe]
<4> [260.730688] ? __pfx_guc_engine_process_msg+0x10/0x10 [xe]
<4> [260.730872] ? drm_sched_main+0x24b/0x8e0 [gpu_sched]
<4> [260.730893] ? __pfx_lock_release+0x10/0x10
<4> [260.730903] ? do_raw_spin_lock+0x11d/0x1e0
<4> [260.730915] ? __pfx_do_raw_spin_lock+0x10/0x10
<4> [260.730939] drm_sched_main+0x29c/0x8e0 [gpu_sched]
<4> [260.730978] process_one_work+0x527/0x990
<4> [260.731004] ? __pfx_process_one_work+0x10/0x10
<4> [260.731022] ? __pfx_do_raw_spin_lock+0x10/0x10
<4> [260.731030] ? mark_held_locks+0x24/0x90
<4> [260.731053] worker_thread+0x2d1/0x640
<4> [260.731075] ? __kthread_parkme+0xd1/0xf0
<4> [260.731088] ? __pfx_worker_thread+0x10/0x10
<4> [260.731097] kthread+0x19d/0x1e0
<4> [260.731105] ? __pfx_kthread+0x10/0x10
<4> [260.731119] ret_from_fork+0x29/0x50
<4> [260.731152] </TASK>
<4> [260.731158] irq event stamp: 302595
<4> [260.731164] hardirqs last enabled at (302601): [<ffffffff811f9b4b>] __up_console_sem+0x6b/0x80
<4> [260.731174] hardirqs last disabled at (302606): [<ffffffff811f9b30>] __up_console_sem+0x50/0x80
<4> [260.731182] softirqs last enabled at (302390): [<ffffffff8255c6f5>] __do_softirq+0x385/0x485
<4> [260.731192] softirqs last disabled at (301881): [<ffffffff8111cf75>] irq_exit_rcu+0x95/0xc0
<4> [260.731202] ---[ end trace 0000000000000000 ]---
<6> [260.737761] [IGT] xe_vm: exiting, ret=0
<6> [260.753605] Console: switching to colour frame buffer device 480x135